--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -4,3 +4,89 @@
   | default @import url()
   |============================
 */
+:root {
+  --font-family: "Montserrat", sans-serif;
+}
+form {
+  width: 371px;
+  height: 40px;
+  display: flex;
+  gap: 8px;
+  margin: 0 auto;
+}
+input {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  border-radius: 4px;
+  border: 1px solid #808080;
+  width: 272px;
+  height: 40px;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 8px 16px;
+}
+input::placeholder {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #808080;
+}
+input:hover {
+  border-color:  #000;
+}
+
+input:active {
+  border-color: #4e75ff;
+}
+button {
+  border-radius: 8px;
+  padding: 8px 16px;
+  width: 91px;
+  height: 40px;
+  background-color: #4e75ff;
+  border: none;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #fff;
+}
+button:hover {
+  background-color: #6c8cff;
+}
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px;
+  justify-content: center;
+  margin: 20px;
+}
+
+.gallery-item {
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  overflow: hidden;
+  width: 200px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.gallery-item img {
+  width: 100%;
+  height: auto;
+}
+
+.gallery-item .info {
+  padding: 10px;
+  text-align: left;
+}
+
+.gallery-item .info p {
+  margin: 5px 0;
+  font-size: 14px;
+}
